feat: 树查询接口